--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               </div>
             </div>
             <div class="col text_align__left">
-              <p>Среда</p>
-              <span>17 мая</span>
+              <p class="day_week">Среда</p>
+              <span class="day_number">17 мая</span>
               <div class="hr"></div>
               <div class="time">20:00 МСК</div>
             </div>
@@ -50,7 +50,7 @@
             <img src="img/ivan.png" alt="ivan">
           </div>
           <div class="speaker_info">
-            <p>Спикер</p>
+            <span class="italian">Спикер</span>
             <p> Иван
               <br> ЗИМБИЦКИЙ
             </p>
@@ -68,7 +68,47 @@
             </ul>
           </div>
         </div>
-        <div class="col-6-sm right_column"></div>
+        <div class="col-6-sm right_column">
+          <p class="stream_starts">
+            До старта трансляции осталось…
+          </p>
+          <div class="timer">
+            <div class="row d-flex justify-content-between">
+              <div class="col-auto">
+                <div id="d" class="timer_block">0</div>
+                <div class="timer_text">дней</div>
+              </div>
+              <div class="col-auto">
+                <div id="h" class="timer_block">0</div>
+                <div class="timer_text">часов</div>
+              </div>
+              <div class="col-auto">
+                <div id="m" class="timer_block">0</div>
+                <div class="timer_text">минут</div>
+              </div>
+              <div class="col-auto">
+                <div id="s" class="timer_block">0</div>
+                <div class="timer_text">секунд</div>
+              </div>
+
+            </div>
+          </div>
+          <div class="right_column__list-tittle">
+            <p>Вот всего лишь малая часть из того, что ты узнаешь на вебинаре:</p>
+          </div>
+          <div class="right_column_list">
+            <ul>
+              <li>Простая 10 шаговая система для дизайна «Саморазвивающейся Компании» в 2017 году</li>
+              <li> Как решить проблему людей №1 и масштабироать бизнес в 10 раз</li>
+              <li> Какие 4 пункта плана внедрить за следующие 6 месяцев, чтобы освободить 80% вашего время</li>
+              <li> 2 простых и легкие для внедрения «фишки», которые радикально поднимут эффективность компании</li>
+              <li> 3 фундаментальные причины, почему Ваш бизнес никогда не масштабируется на свой 100% потенциал прибыли </li>
+              <li> Вы или Вас: как перестать быть жертвой подчиненных и начать профессионально управлять людьми</li>
+              <li> 3 тактики, которые превратят кризисную компанию в устойчивую и прибыльную в 2017 году </li>
+              <li> Формула как построить здоровую и умную компанию на долгие годы, чтобы и внуки вами гордились </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
   </div>
