--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               </div>
             </div>
             <div class="col text_align__left">
-              <p class="day_week">Среда</p>
-              <span class="day_number">17 мая</span>
+              <p class="day_week">пятница</p>
+              <span class="day_number">17 августа</span>
               <div class="hr"></div>
               <div class="time">20:00 МСК</div>
             </div>
@@ -98,18 +98,34 @@
           </div>
           <div class="right_column_list">
             <ul>
-              <li>Простая 10 шаговая система для дизайна «Саморазвивающейся Компании» в 2017 году</li>
+              <li>Простая
+                <strong> 10 шаговая система</strong> для дизайна «Саморазвивающейся Компании» в 2017 году</li>
               <li> Как решить проблему людей №1 и масштабироать бизнес в 10 раз</li>
-              <li> Какие 4 пункта плана внедрить за следующие 6 месяцев, чтобы освободить 80% вашего время</li>
+              <li> Какие
+                <strong>4 пункта</strong> плана внедрить за следующие 6 месяцев, чтобы освободить 80% вашего время</li>
               <li> 2 простых и легкие для внедрения «фишки», которые радикально поднимут эффективность компании</li>
-              <li> 3 фундаментальные причины, почему Ваш бизнес никогда не масштабируется на свой 100% потенциал прибыли </li>
-              <li> Вы или Вас: как перестать быть жертвой подчиненных и начать профессионально управлять людьми</li>
-              <li> 3 тактики, которые превратят кризисную компанию в устойчивую и прибыльную в 2017 году </li>
-              <li> Формула как построить здоровую и умную компанию на долгие годы, чтобы и внуки вами гордились </li>
+              <li>
+                <strong>3 фундаментальные причины</strong>, почему Ваш бизнес никогда не масштабируется на свой 100% потенциал прибыли
+                </li>
+              <li>
+                <strong>Вы или Вас:</strong> как перестать быть жертвой подчиненных и начать профессионально управлять людьми</li>
+              <li>
+                <strong>3 тактики,</strong> которые превратят кризисную компанию в устойчивую и прибыльную в 2017 году </li>
+              <li>
+                <strong>Формула</strong> как построить здоровую и умную компанию на долгие годы, чтобы и внуки вами гордились </li>
             </ul>
           </div>
         </div>
       </div>
+      <p class="stream_form">
+        Формат участия: живое присутствие в онлайн (повтора и записи не будет) всего 500 мест
+      </p>
+      <div class="who_button">
+        Для кого вебинар?
+      </div>
+      <p class="who_text">
+        Для существующих предпринимателей с чистым доходом от 150 000 рублей в месяц
+      </p>
     </section>
   </div>
 
