done with all sections and mobile

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </div>
     </header>
     <section class="section_one">
+        <span class="present"> GoldCoach представляет… </span>
       <p class="color_brown">
         БЕСПЛАТНЫЙ ВЕБИНАР
       </p>
